# Page-Analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: main.yml
page_analyzer/: app.py  database.py  parser.py  url_check.py  validator.py
page_analyzer/templates/: base.html  index.html  internal_server_error.html  page_not_found.html  url.html  urls.html
