[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Irina Kurus <evans.mira@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8.1"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
